--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.graphql.schema.printer.enabled=true
 spring.graphql.graphql.enabled=true
 
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCL
-spring.datasource.username=ahmed
-spring.datasource.password=ahmed
+spring.datasource.username=your-username
+spring.datasource.password=your-password
 spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 
 #hibernate config
